<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edtCodigo"
        android:layout_width="285dp"
        android:layout_height="65dp"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="39dp"
        android:ems="10"
        android:hint="@string/Hint_codigo"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="34dp"
        android:text="@string/Texto_codigo"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="39dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/edtCodigo"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <RadioGroup
        android:id="@+id/RG3"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="22dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnGuardar"
        app:layout_constraintEnd_toStartOf="@+id/btnLista"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <RadioButton
            android:id="@+id/rbnSi3"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:text="@string/Texto_si" />

        <RadioButton
            android:id="@+id/rbnNo3"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/Texto_no" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/RG2"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="44dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="@+id/RG3"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView6">

        <RadioButton
            android:id="@+id/rbnSi2"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:text="@string/Texto_si" />

        <RadioButton
            android:id="@+id/rbnNo2"
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:text="@string/Texto_no" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="127dp"
        android:layout_marginBottom="127dp"
        android:text="@string/Texto_internet"
        app:layout_constraintBottom_toBottomOf="@+id/btnGuardar"
        app:layout_constraintStart_toStartOf="@+id/RG3"
        app:layout_constraintTop_toBottomOf="@+id/RG1" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="25dp"
        android:text="@string/Texto_celular"
        app:layout_constraintStart_toStartOf="@+id/RG1"
        app:layout_constraintTop_toBottomOf="@+id/RG1" />

    <RadioGroup
        android:id="@+id/RG1"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <RadioButton
            android:id="@+id/rbtSi1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/Texto_si" />

        <RadioButton
            android:id="@+id/rbtNo1"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:text="@string/Texto_no" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="86dp"
        android:text="@string/Texto_programa"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="78dp"
        android:text="@string/Texto_compu"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        tools:layout_editor_absoluteX="411dp" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:text="@string/texto_guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/RG3" />

    <Button
        android:id="@+id/btnLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="91dp"
        android:layout_marginRight="91dp"
        android:layout_marginBottom="33dp"
        android:text="@string/Texto_listado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="153dp"
        android:text="@string/Texto_nombre"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/edtNombre"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:hint="@string/Hint_nombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="@+id/edtCodigo"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/edtCodigo" />


</androidx.constraintlayout.widget.ConstraintLayout>